--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,12 @@
                 "[project-root]/.drush-lock-update": "assets/drush-lock-update",
                 "[project-root]/pantheon.upstream.yml": "assets/pantheon.upstream.yml",
                 "[web-root]/sites/default/default.services.pantheon.preproduction.yml": "assets/default.services.pantheon.preproduction.yml",
-                "[web-root]/sites/default/settings.pantheon.php": "assets/settings.pantheon.php"
+                "[web-root]/sites/default/settings.pantheon.php": "assets/settings.pantheon.php",
+                "[web-root]/sites/default/settings.php": {
+                    "mode": "replace",
+                    "path": "assets/initial.settings.pantheon.php",
+                    "overwrite": false
+                }
             }
         }
     }
