--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,26 @@
         "drupal-scaffold": {
             "file-mapping": {
                 "[project-root]/.drush-lock-update": "assets/drush-lock-update",
+                "[project-root]/.gitignore": {
+                    "mode": "replace",
+                    "path": "assets/initial.gitignore",
+                    "overwrite": false
+                },
                 "[web-root]/sites/default/default.services.pantheon.preproduction.yml": "assets/default.services.pantheon.preproduction.yml",
                 "[web-root]/sites/default/settings.pantheon.php": "assets/settings.pantheon.php",
                 "[web-root]/sites/default/settings.php": {
                     "mode": "replace",
                     "path": "assets/initial.settings.php",
+                    "overwrite": false
+                },
+                "[web-root]/sites/default/config/.htaccess": {
+                    "mode": "replace",
+                    "path": "assets/initial.config.htaccess",
+                    "overwrite": false
+                },
+                "[web-root]/sites/default/config/README": {
+                    "mode": "replace",
+                    "path": "assets/initial.config.README",
                     "overwrite": false
                 }
             }
