--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,11 @@
         "drupal-scaffold": {
             "file-mapping": {
                 "[project-root]/.drush-lock-update": "assets/drush-lock-update",
+                "[project-root]/config/README.txt": {
+                    "mode": "replace",
+                    "path": "assets/config-readme.txt",
+                    "overwrite": false
+                },
                 "[web-root]/sites/default/default.services.pantheon.preproduction.yml": "assets/default.services.pantheon.preproduction.yml",
                 "[web-root]/sites/default/settings.pantheon.php": "assets/settings.pantheon.php",
                 "[web-root]/sites/default/settings.php": {
